--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="refresh" content="0; URL=Snooker.html" />
-    <title>Redirecting...</title>
+    <meta http-equiv="refresh" content="0; url=/snooker.html" />
   </head>
   <body>
-    <p>如果没有自动跳转，请点击 <a href="Snooker.html">这里</a>。</p>
   </body>
 </html>
